# frontends_manager

./: .gitignore  README.md  build_all.sh  package-lock.json  package.json  whitepaper.md
.github/workflows/: build.yml  test.yml
src/: build_all.sh  closing.html  config.json  frontends.json  index.html  index.js  main.js  message.html  refresh.html  settings.html  settings.js
src-tauri/: Caddyfile  Cargo.toml  frontends.json  tauri.conf.json
src-tauri/caddy/: Caddyfile
src-tauri/docker_frontends/: biblioreads.yml  libremdb.yml  lingva.yml  redis.yml  teddit.yml
src-tauri/icons/: icon.icns
src-tauri/src/: Caddyfile  commands.rs  frontends.json  frontends.rs  main.rs
src/assets/: backup
src/assets/stylesheets/: styles.css
src/docker_compose/: proxitok.yml  redis.yml  searxng.yml
src/frontends/anonymousoverflow/: build.sh
src/frontends/breezewiki/: build.sh  config.ini
src/frontends/breezewiki/breezewiki-dist/: config.ini
src/frontends/caddy/: Caddyfile
src/frontends/dumb/: build.sh
src/frontends/libreddit/: build.sh  libreddit.toml
src/frontends/nitter/: build.sh  nitter.conf  nitter_linux_x86_64
src/frontends/nitter/public/css/: style.css
src/frontends/nitter/public/md/: about.html
src/frontends/proxitok/: docker-compose.yml
src/frontends/quetre/: docker-compose.yml
src/frontends/redis/redis-stable/src/: acl.d  ae.d  anet.d  aof.d  bio.d  bitops.d  blocked.d  call_reply.d  childinfo.d  cli_common.d  cluster.d  commands.d  config.d  connection.d  crc16.d  db.d  debug.d  defrag.d  eval.d  evict.d  expire.d  function_lua.d  functions.d  (+43 more)
src/frontends/rimgo/: build.sh
src/frontends/searxng/: docker-compose.yml
src/frontends/simplytranslate/: build.sh  config.conf  requirements.txt
src/services/: backup.js  binary_frontends.js  docker.js  docker_frontends.js  executable.js  fs-watch.js  icons.js  utils.js
